--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "backend_project",
   "version": "1.0.0",
   "description": "a backend project",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon rc/index.js"
   },
   "keywords": [
     "javascript",
     "backend"
   ],
   "author": "Piyush Dokania",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "D": "^1.0.0",
+    "nodemon": "^3.1.11"
+  }
 }
